--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -2,26 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "293d42bc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ All dependencies imported successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "NW Realite - Property Valuation Analysis & AI Report Generator\n",
@@ -56,19 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "407c582e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Configuration loaded for NW Realite - Property Valuation Analysis Report\n",
-      " Report date: December 08, 2025\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Supabase Configuration\n",
@@ -90,21 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0f6e8e84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Successfully fetched 117 records from Supabase\n",
-      "\n",
-      "Dataset Shape: (117, 27)\n",
-      "Columns: ['property_id', 'report_reference', 'client_name', 'valuer_name', 'inspection_date', 'valuation_date', 'location_county', 'location_description', 'location_coordinates', 'plot_area_hectares', 'plot_area_acres', 'land_use', 'plot_shape', 'soil_type', 'gradient', 'tenure_type', 'registered_proprietor', 'market_value_amount', 'metadata', 'created_at', 'land_reg_number', 'encumbrance_category', 'id', 'sublocation', 'property_inspector', 'turnaround_category', 'client_type']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fetch_valuation_data():\n",
     "    \"\"\"Fetch all property valuation data from Supabase\"\"\"\n",
@@ -130,23 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "de518961",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Data preparation complete\n",
-      "\n",
-      "New derived columns added:\n",
-      "- Time features: inspection_year, inspection_month, inspection_quarter\n",
-      "- Value metrics: value_per_acre, value_category\n",
-      "- Categories: land_size_category, client_type, has_encumbrance\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def prepare_data(df):\n",
     "    \"\"\"Clean and prepare data with derived features\"\"\"\n",
@@ -216,45 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d7140fe4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Internal metrics preparation complete\n",
-      "\n",
-      "New internal columns added:\n",
-      "- Operational: turnaround_category, valuer_name\n",
-      "- Client: client_repeat_status, client_frequency\n",
-      "- Geographic: nairobi_sublocation\n",
-      "- Complexity: property_complexity\n",
-      "- Workload: workload_week, workload_year_week, report_age_days\n",
-      "\n",
-      "============================================================\n",
-      "INTERNAL METRICS SUMMARY\n",
-      "============================================================\n",
-      "\n",
-      "Turnaround Distribution:\n",
-      "turnaround_category\n",
-      "Fast Track    69\n",
-      "Delayed       28\n",
-      "Standard      20\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "Client Status:\n",
-      "client_repeat_status\n",
-      "Repeat Client      102\n",
-      "One-time Client     15\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "Active Valuers: 2\n",
-      "Nairobi Sublocations: 14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== INTERNAL METRICS DATA PREPARATION =====\n",
     "\n",
@@ -363,25 +279,7 @@
    "execution_count": null,
    "id": "1f1531e5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Length mismatch: Expected axis has 4 elements, new values have 5 elements",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 134\u001b[39m\n\u001b[32m    130\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m internal_metrics\n\u001b[32m    133\u001b[39m \u001b[38;5;66;03m# Calculate internal metrics\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m134\u001b[39m internal_metrics = \u001b[43mcalculate_internal_metrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    136\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m + \u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m*\u001b[32m80\u001b[39m)\n\u001b[32m    137\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mINTERNAL METRICS SUMMARY\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 28\u001b[39m, in \u001b[36mcalculate_internal_metrics\u001b[39m\u001b[34m(df)\u001b[39m\n\u001b[32m     22\u001b[39m \u001b[38;5;66;03m# ===== 2. VALUER PERFORMANCE =====\u001b[39;00m\n\u001b[32m     23\u001b[39m valuer_stats = df.groupby(\u001b[33m'\u001b[39m\u001b[33mvaluer_name\u001b[39m\u001b[33m'\u001b[39m).agg({\n\u001b[32m     24\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mproperty_id\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mcount\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     25\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mdays_to_valuation\u001b[39m\u001b[33m'\u001b[39m: [\u001b[33m'\u001b[39m\u001b[33mmean\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mmedian\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m     26\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mmarket_value_amount\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33msum\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     27\u001b[39m })\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[43mvaluer_stats\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m = [\u001b[33m'\u001b[39m\u001b[33mreports_count\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mavg_turnaround\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mmedian_turnaround\u001b[39m\u001b[33m'\u001b[39m, \n\u001b[32m     29\u001b[39m                         \u001b[33m'\u001b[39m\u001b[33mtotal_value_handled\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mavg_completeness\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m# Turnaround breakdown by valuer\u001b[39;00m\n\u001b[32m     32\u001b[39m valuer_turnaround = df.groupby([\u001b[33m'\u001b[39m\u001b[33mvaluer_name\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mturnaround_category\u001b[39m\u001b[33m'\u001b[39m]).size().unstack(fill_value=\u001b[32m0\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\env\\Lib\\site-packages\\pandas\\core\\generic.py:6335\u001b[39m, in \u001b[36mNDFrame.__setattr__\u001b[39m\u001b[34m(self, name, value)\u001b[39m\n\u001b[32m   6333\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m   6334\u001b[39m     \u001b[38;5;28mobject\u001b[39m.\u001b[34m__getattribute__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\n\u001b[32m-> \u001b[39m\u001b[32m6335\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[43m.\u001b[49m\u001b[34;43m__setattr__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   6336\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[32m   6337\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/properties.pyx:69\u001b[39m, in \u001b[36mpandas._libs.properties.AxisProperty.__set__\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\env\\Lib\\site-packages\\pandas\\core\\generic.py:817\u001b[39m, in \u001b[36mNDFrame._set_axis\u001b[39m\u001b[34m(self, axis, labels)\u001b[39m\n\u001b[32m    812\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    813\u001b[39m \u001b[33;03mThis is called from the cython code when we set the `index` attribute\u001b[39;00m\n\u001b[32m    814\u001b[39m \u001b[33;03mdirectly, e.g. `series.index = [1, 2, 3]`.\u001b[39;00m\n\u001b[32m    815\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    816\u001b[39m labels = ensure_index(labels)\n\u001b[32m--> \u001b[39m\u001b[32m817\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_mgr\u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    818\u001b[39m \u001b[38;5;28mself\u001b[39m._clear_item_cache()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\env\\Lib\\site-packages\\pandas\\core\\internals\\managers.py:238\u001b[39m, in \u001b[36mBaseBlockManager.set_axis\u001b[39m\u001b[34m(self, axis, new_labels)\u001b[39m\n\u001b[32m    236\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mset_axis\u001b[39m(\u001b[38;5;28mself\u001b[39m, axis: AxisInt, new_labels: Index) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    237\u001b[39m     \u001b[38;5;66;03m# Caller is responsible for ensuring we have an Index object.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m238\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_validate_set_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_labels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    239\u001b[39m     \u001b[38;5;28mself\u001b[39m.axes[axis] = new_labels\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\samue\\Documents\\Work\\Code\\valuation_data_miner\\env\\Lib\\site-packages\\pandas\\core\\internals\\base.py:98\u001b[39m, in \u001b[36mDataManager._validate_set_axis\u001b[39m\u001b[34m(self, axis, new_labels)\u001b[39m\n\u001b[32m     95\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m     97\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m new_len != old_len:\n\u001b[32m---> \u001b[39m\u001b[32m98\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m     99\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mLength mismatch: Expected axis has \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mold_len\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m elements, new \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    100\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mvalues have \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_len\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m elements\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    101\u001b[39m     )\n",
-      "\u001b[31mValueError\u001b[39m: Length mismatch: Expected axis has 4 elements, new values have 5 elements"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== INTERNAL METRICS CALCULATION =====\n",
     "\n",
@@ -544,37 +442,21 @@
     "print(f\"   - Avg Reports/Valuer: {internal_metrics['valuers']['avg_reports_per_valuer']:.1f}\")\n",
     "print(f\"   - Top Performer: {internal_metrics['valuers']['top_performer']}\")\n",
     "\n",
-    "print(f\"\\n🔄 Client Retention:\")\n",
+    "print(f\"\\n Client Retention:\")\n",
     "print(f\"   - Repeat Client Rate: {internal_metrics['client_retention']['repeat_rate']:.1f}%\")\n",
     "print(f\"   - Unique Clients: {internal_metrics['client_retention']['total_unique_clients']}\")\n",
     "\n",
-    "# print(f\"\\n✅ Data Quality:\")\n",
+    "# print(f\"\\n Data Quality:\")\n",
     "# print(f\"   - Average Completeness: {internal_metrics['data_quality']['avg_completeness_score']:.1f}%\")\n",
     "# print(f\"   - Complete Reports: {internal_metrics['data_quality']['pct_complete']:.1f}%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "bb206a63",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ All metrics calculated successfully\n",
-      "\n",
-      " METRICS SUMMARY:\n",
-      "Portfolio: 9 metrics\n",
-      "Temporal: 8 metrics\n",
-      "Clients: 5 metrics\n",
-      "Geographic: 5 metrics\n",
-      "Land Use: 3 metrics\n",
-      "Risk: 4 metrics\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def calculate_all_metrics(df):\n",
     "    \"\"\"Calculate comprehensive metrics for the report\"\"\"\n",
@@ -747,18 +629,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "2d37111d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Summary visualizations created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_summary_charts(df, metrics):\n",
     "    \"\"\"Create key visualizations for the report\"\"\"\n",
@@ -853,12 +727,13 @@
    "outputs": [],
    "source": [
     "# ===== INTERNAL AI REPORT GENERATOR =====\n",
+    "print(F'API KEY: {GEMINI_API_KEY}')\n",
     "\n",
     "def generate_internal_ai_report(internal_metrics, df):\n",
     "    \"\"\"Generate internal operations report using Gemini\"\"\"\n",
     "    \n",
     "    # Initialize Gemini model\n",
-    "    genai.configure(api_key=os.getenv(\"GEMINI_API_KEY\"))\n",
+    "    genai.configure(api_key=GEMINI_API_KEY)\n",
     "    model = genai.GenerativeModel(\"gemini-2.5-flash\")\n",
     "    \n",
     "    # Prepare internal metrics summary\n",
@@ -933,7 +808,7 @@
     "- Simple dashes (-) for bullet points\n",
     "- Plain text paragraphs\n",
     "- Consistent font size throughout\n",
-    "- Date: 4th December 2025\n",
+    "- Date: 8th December 2025\n",
     "- Prepared by Samuel Wanyua, Data Analytics Engineer & Business Intelligence, NW Realite\n",
     "\n",
     "{metrics_summary}\n",
@@ -1032,27 +907,7 @@
    "execution_count": null,
    "id": "cd6a79a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ AI report generated successfully\n",
-      "\n",
-      "================================================================================\n",
-      "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
-      "================================================================================\n",
-      "PROPERTY VALUATION EXECUTIVE REPORT\n",
-      "\n",
-      "2nd December 2025\n",
-      "Prepared by Samuel Wanyua, Data Scientist, NW Realite\n",
-      "\n",
-      "EXECUTIVE SUMMARY\n",
-      "\n",
-      "This report provides a comprehensive overview of NW Realite's property valuation portfolio, analyzing key performance indicators, growth trends, client and geographic distribution, and risk factors. The portfolio currently comprises 117 properties with a total market value of KShs 12.63 Billion. While the number of properties saw a Month-over-Month (MoM) decrease, the ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generate_ai_report(metrics, df):\n",
     "    \"\"\"Use Gemini 2.5 Flash to generate comprehensive report\"\"\"\n",
@@ -1192,18 +1047,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "21dac93e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ PDF report created successfully: nw_realite_report.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_pdf_report(metrics, ai_report, chart_buffer, filename=\"NW_Realite_Valuation_Report.pdf\"):\n",
     "    \"\"\"Generate professional PDF report\"\"\"\n",
@@ -1642,20 +1489,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "5f413d23",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating PDF report...\n",
-      "✓ PDF report created: nw_realite_report.pdf\n",
-      "✓ PDF report created successfully: nw_realite_report.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ensure df, metrics, ai_report, and chart_buffer exist\n",
     "if 'df' not in globals() or df is None:\n",
