--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -1520,6 +1520,330 @@
     "\n",
     "print(f\"✓ PDF report created successfully: {output_path}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b2378d7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All metrics calculated successfully\n",
+      "\n",
+      "========================================================================================================================\n",
+      "📊 EXTERNAL REPORT — FULL METRICS DUMP\n",
+      "========================================================================================================================\n",
+      "\n",
+      "🔷 PORTFOLIO METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "total_properties: 117\n",
+      "total_value: 12627400000\n",
+      "average_value: 107926495.72649573\n",
+      "median_value: 50000000.0\n",
+      "std_value: 169238050.76402676\n",
+      "total_acres: 691.29354\n",
+      "total_hectares: 276.3411\n",
+      "average_acres: 5.908491794871795\n",
+      "cv: 156.80862203930445\n",
+      "\n",
+      "🔷 TEMPORAL METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "mom_growth_count: -50.0\n",
+      "mom_growth_value: 129.00763358778627\n",
+      "ytd_properties: 117\n",
+      "ytd_value: 12627400000\n",
+      "avg_days_to_valuation: 20.153846153846153\n",
+      "median_days_to_valuation: 8.0\n",
+      "current_month_props: 1\n",
+      "last_month_props: 2\n",
+      "\n",
+      "🔷 CLIENTS METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "by_type: {'Bank': {'property_id': 80, 'market_value_amount': 8047500000}, 'Corporate': {'property_id': 13, 'market_value_amount': 2612000000}, 'Individual': {'property_id': 21, 'market_value_amount': 1938400000}, 'Sacco': {'property_id': 3, 'market_value_amount': 29500000}}\n",
+      "top_5_clients: {'Absa Bank Kenya PLC': {'property_id': 30, 'market_value_amount': 4186500000}, 'Co-op Trust Investment Services Limited': {'property_id': 3, 'market_value_amount': 1700000000}, 'KCB Bank Kenya Limited': {'property_id': 21, 'market_value_amount': 1333200000}, 'Co-operative Bank of Kenya Limited': {'property_id': 15, 'market_value_amount': 1194800000}, 'Director, Children of Hope, Kikuyu, Kiambu County': {'property_id': 1, 'market_value_amount': 735000000}}\n",
+      "unique_clients: 28\n",
+      "concentration_ratio: 72.45751302722651\n",
+      "avg_value_per_client: 450978571.4285714\n",
+      "\n",
+      "🔷 GEOGRAPHIC METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "num_counties: 23\n",
+      "top_5_counties: {'Nairobi': {'count': 43, 'total_value': 7113600000, 'avg_value': 165432558.1395349}, 'Kiambu': {'count': 9, 'total_value': 1038500000, 'avg_value': 115388888.8888889}, 'Uasin Gishu': {'count': 9, 'total_value': 859900000, 'avg_value': 95544444.44444445}, 'Nakuru': {'count': 7, 'total_value': 635400000, 'avg_value': 90771428.57142857}, 'Nyeri': {'count': 4, 'total_value': 632000000, 'avg_value': 158000000.0}}\n",
+      "concentration: 81.4055149912096\n",
+      "highest_avg_county: Kisii\n",
+      "most_active_county: Nairobi\n",
+      "\n",
+      "🔷 LAND_USE METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "breakdown: {'Agricultural': {'count': 13, 'total_value': 1771500000, 'avg_value': 136269230.76923078, 'pct_value': 14.02901626621474}, 'Commercial': {'count': 38, 'total_value': 5129000000, 'avg_value': 134973684.21052632, 'pct_value': 40.61802112865673}, 'Industrial': {'count': 3, 'total_value': 217500000, 'avg_value': 72500000.0, 'pct_value': 1.7224448421686176}, 'Mixed Use': {'count': 18, 'total_value': 3819000000, 'avg_value': 212166666.66666666, 'pct_value': 30.243755642491728}, 'Residential': {'count': 42, 'total_value': 1611400000, 'avg_value': 38366666.666666664, 'pct_value': 12.761138476646025}, 'Vacant': {'count': 3, 'total_value': 79000000, 'avg_value': 26333333.333333332, 'pct_value': 0.6256236438221645}}\n",
+      "dominant: Commercial\n",
+      "highest_avg: Mixed Use\n",
+      "\n",
+      "🔷 VALUE_DISTRIBUTION METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "by_category: {'10M-50M': 34, '100M-500M': 27, '50M-100M': 27, 'Under 10M': 24, 'Above 500M': 4}\n",
+      "top_10_pct_value: 45.49630169314348\n",
+      "\n",
+      "🔷 RISK METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "encumbrance_breakdown: {'Has Charges': {'count': 36, 'total_value': 2745300000, 'avg_value': 76258333.33333333}, 'None': {'count': 39, 'total_value': 4829200000, 'avg_value': 123825641.02564102}, 'Unascertained': {'count': 42, 'total_value': 5052900000, 'avg_value': 120307142.85714285}}\n",
+      "pct_encumbered: 30.76923076923077\n",
+      "value_at_risk: 2745300000\n",
+      "pct_value_encumbered: 21.74081758715175\n",
+      "\n",
+      "🔷 TENURE METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "Freehold: {'count': 47, 'total_value': 3851300000, 'avg_value': 81942553.19148937}\n",
+      "Leasehold: {'count': 70, 'total_value': 8776100000, 'avg_value': 125372857.14285715}\n",
+      "\n",
+      "🔷 VALUE_PER_ACRE METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "overall_avg: 378125492.0914287\n",
+      "overall_median: 128000000.0\n",
+      "by_county_top5: {'Nairobi': 736923791.2801882, 'Kisumu': 423911324.98505116, 'Kisii': 355837661.08867085, 'Mombasa': 334197618.11527175, 'Meru': 272610647.85118663}\n",
+      "by_land_use: {'Mixed Use': 760019026.1390018, 'Commercial': 589972156.2631712, 'Residential': 162808980.20063764, 'Industrial': 161883516.4362321, 'Vacant': 100231675.0401481, 'Agricultural': 6382503.987543979}\n",
+      "\n",
+      "🔷 CHARACTERISTICS METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "soil_type: {'Red Soil': 57, 'Black Cotton Soil': 17, 'Mixed Soil': 10, 'Red Loam Soil': 9, 'Mixed Soil - Sandy/Coral': 6, 'Coral Soil': 4, 'Grey Volcanic Soil': 4, 'Sandy Soil': 4, 'Mixed Soil - Black/Brown': 2, 'Rocky Black Soil': 1, 'Mixed soil': 1, 'Brown Soil': 1, 'Mixed Loam Soil': 1}\n",
+      "plot_shape: {'Rectangular': 89, 'Irregular': 14, 'Trapezoidal': 11, 'Wedge-Shaped': 1}\n",
+      "gradient: {'Flat': 69, 'Gentle Slope': 38, 'Steep': 1, 'Level': 1, 'Sloped': 1}\n",
+      "most_common_soil: Red Soil\n",
+      "most_common_shape: Rectangular\n",
+      "\n",
+      "🔷 PERFORMANCE METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "num_valuers: 2\n",
+      "avg_properties_per_valuer: 58.5\n",
+      "most_active_valuer: Danish Onyango Orech\n",
+      "monthly_avg_inspections: 10.636363636363637\n",
+      "\n",
+      "========================================================================================================================\n",
+      "SUMMARY COUNTS\n",
+      "========================================================================================================================\n",
+      "Portfolio metrics: 9\n",
+      "Temporal metrics: 8\n",
+      "Client metrics: 5\n",
+      "Geographic metrics: 5\n",
+      "Land Use metrics: 3\n",
+      "Risk metrics: 4\n",
+      "Tenure metrics: 2\n",
+      "Value Per Acre metrics: 4\n",
+      "Characteristics metrics: 5\n",
+      "Performance metrics: 4\n",
+      "\n",
+      "✓ External report metrics printed successfully.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================== CELL 1: PRINT ALL EXTERNAL METRICS ======================\n",
+    "\n",
+    "# Calculate metrics\n",
+    "metrics = calculate_all_metrics(df)\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*120)\n",
+    "print(\"📊 EXTERNAL REPORT — FULL METRICS DUMP\")\n",
+    "print(\"=\"*120)\n",
+    "\n",
+    "for section_name, section_values in metrics.items():\n",
+    "    print(f\"\\n🔷 {section_name.upper()} METRICS\")\n",
+    "    print(\"-\" * 80)\n",
+    "    \n",
+    "    if isinstance(section_values, dict):\n",
+    "        for key, value in section_values.items():\n",
+    "            print(f\"{key}: {value}\")\n",
+    "    else:\n",
+    "        print(section_values)\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*120)\n",
+    "print(\"SUMMARY COUNTS\")\n",
+    "print(\"=\"*120)\n",
+    "print(f\"Portfolio metrics: {len(metrics['portfolio'])}\")\n",
+    "print(f\"Temporal metrics: {len(metrics['temporal'])}\")\n",
+    "print(f\"Client metrics: {len(metrics['clients'])}\")\n",
+    "print(f\"Geographic metrics: {len(metrics['geographic'])}\")\n",
+    "print(f\"Land Use metrics: {len(metrics['land_use'])}\")\n",
+    "print(f\"Risk metrics: {len(metrics['risk'])}\")\n",
+    "print(f\"Tenure metrics: {len(metrics['tenure'])}\")\n",
+    "print(f\"Value Per Acre metrics: {len(metrics['value_per_acre'])}\")\n",
+    "print(f\"Characteristics metrics: {len(metrics['characteristics'])}\")\n",
+    "print(f\"Performance metrics: {len(metrics['performance'])}\")\n",
+    "\n",
+    "print(\"\\n✓ External report metrics printed successfully.\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c7e55e80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Internal metrics calculated successfully\n",
+      "\n",
+      "========================================================================================================================\n",
+      "📘 INTERNAL REPORT — FULL METRICS DUMP\n",
+      "========================================================================================================================\n",
+      "\n",
+      "🔶 OPERATIONS METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "total_reports: 117\n",
+      "avg_turnaround_days: 20.153846153846153\n",
+      "median_turnaround_days: 8.0\n",
+      "std_turnaround_days: 23.409258183468037\n",
+      "fast_track_count: 69\n",
+      "standard_count: 20\n",
+      "delayed_count: 28\n",
+      "pct_fast_track: 58.97435897435898\n",
+      "pct_delayed: 23.931623931623932\n",
+      "reports_at_risk: 28\n",
+      "\n",
+      "🔶 VALUERS METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "active_valuers: 2\n",
+      "avg_reports_per_valuer: 58.5\n",
+      "performance_by_valuer: {'Danish Onyango Orech': {'reports_count': 74, 'avg_turnaround': 18.364864864864863, 'median_turnaround': 8.0, 'total_value_handled': 7151700000}, 'Simon Oruka Orwa': {'reports_count': 43, 'avg_turnaround': 23.232558139534884, 'median_turnaround': 8.0, 'total_value_handled': 5475700000}}\n",
+      "turnaround_by_valuer: {'Danish Onyango Orech': {'Delayed': 17, 'Fast Track': 46, 'Standard': 11}, 'Simon Oruka Orwa': {'Delayed': 11, 'Fast Track': 23, 'Standard': 9}}\n",
+      "top_performer: Danish Onyango Orech\n",
+      "fastest_valuer: Danish Onyango Orech\n",
+      "most_value_handled: Danish Onyango Orech\n",
+      "\n",
+      "🔶 CLIENT_RETENTION METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "total_unique_clients: 28\n",
+      "repeat_client_reports: 102\n",
+      "onetime_client_reports: 15\n",
+      "repeat_rate: 87.17948717948718\n",
+      "onetime_rate: 12.82051282051282\n",
+      "avg_reports_per_client: 4.178571428571429\n",
+      "max_reports_per_client: 30\n",
+      "top_repeat_client: Absa Bank Kenya PLC\n",
+      "\n",
+      "🔶 WORKLOAD METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "monthly_distribution: {'Apr 2025': 14, 'Aug 2025': 11, 'Feb 2025': 10, 'Jan 2025': 13, 'Jul 2025': 33, 'Jun 2025': 10, 'Mar 2025': 8, 'May 2025': 7, 'Nov 2025': 1, 'Oct 2025': 2, 'Sep 2025': 8}\n",
+      "weekly_distribution: {'2025-W28': 20, '2025-W29': 1, '2025-W31': 1, '2025-W32': 1, '2025-W33': 2, '2025-W34': 7, '2025-W35': 2, '2025-W36': 4, '2025-W37': 1, '2025-W38': 1, '2025-W41': 2, '2025-W46': 1}\n",
+      "peak_month: Jul 2025\n",
+      "lowest_month: Nov 2025\n",
+      "avg_reports_per_month: 10.636363636363637\n",
+      "valuer_monthly_matrix: {'Danish Onyango Orech': {'Apr 2025': 10, 'Aug 2025': 11, 'Feb 2025': 6, 'Jan 2025': 9, 'Jul 2025': 21, 'Jun 2025': 5, 'Mar 2025': 4, 'May 2025': 4, 'Nov 2025': 1, 'Oct 2025': 1, 'Sep 2025': 2}, 'Simon Oruka Orwa': {'Apr 2025': 4, 'Aug 2025': 0, 'Feb 2025': 4, 'Jan 2025': 4, 'Jul 2025': 12, 'Jun 2025': 5, 'Mar 2025': 4, 'May 2025': 3, 'Nov 2025': 0, 'Oct 2025': 1, 'Sep 2025': 6}}\n",
+      "\n",
+      "🔶 GEOGRAPHIC_COVERAGE METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "counties_covered: 23\n",
+      "reports_per_county: {'Bungoma': 2, 'Elgeyo Marakwet': 2, 'Embu': 2, 'Kajiado': 5, 'Kakamega': 1, 'Kericho': 1, 'Kiambu': 9, 'Kilifi': 3, 'Kisii': 1, 'Kisumu': 2, 'Kwale': 3, 'Laikipia': 2, 'Lamu': 1, 'Machakos': 7, 'Meru': 1, 'Mombasa': 7, \"Murang'a\": 2, 'Nairobi': 43, 'Nakuru': 7, 'Nyeri': 4, 'Taita Taveta': 2, 'Uasin Gishu': 9, 'Vihiga': 1}\n",
+      "nairobi_sublocations: {'Langata': 9, 'Makadara': 7, 'Karen': 5, 'Nairobi CBD': 4, 'Kilimani': 4, 'Lavington': 4, 'Parklands': 2, 'Embakasi South': 2, 'Embakasi North': 2, 'Embakasi Central': 1, 'Ruaraka': 1, 'Kasarani': 1, 'Westlands': 1}\n",
+      "nairobi_report_count: 43\n",
+      "valuer_county_specialization: {'Danish Onyango Orech': {'Bungoma': 2, 'Elgeyo Marakwet': 2, 'Embu': 0, 'Kajiado': 2, 'Kakamega': 1, 'Kericho': 1, 'Kiambu': 7, 'Kilifi': 2, 'Kisii': 1, 'Kisumu': 2, 'Kwale': 0, 'Laikipia': 1, 'Lamu': 1, 'Machakos': 3, 'Meru': 0, 'Mombasa': 5, \"Murang'a\": 2, 'Nairobi': 28, 'Nakuru': 2, 'Nyeri': 2, 'Taita Taveta': 2, 'Uasin Gishu': 7, 'Vihiga': 1}, 'Simon Oruka Orwa': {'Bungoma': 0, 'Elgeyo Marakwet': 0, 'Embu': 2, 'Kajiado': 3, 'Kakamega': 0, 'Kericho': 0, 'Kiambu': 2, 'Kilifi': 1, 'Kisii': 0, 'Kisumu': 0, 'Kwale': 3, 'Laikipia': 1, 'Lamu': 0, 'Machakos': 4, 'Meru': 1, 'Mombasa': 2, \"Murang'a\": 0, 'Nairobi': 15, 'Nakuru': 5, 'Nyeri': 2, 'Taita Taveta': 0, 'Uasin Gishu': 2, 'Vihiga': 0}}\n",
+      "most_covered_county: Nairobi\n",
+      "\n",
+      "🔶 COMPLEXITY METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "distribution: {'Low Complexity': 70, 'Medium Complexity': 42, 'High Complexity': 5}\n",
+      "avg_turnaround_by_complexity: {'High Complexity': 9.0, 'Low Complexity': 21.742857142857144, 'Medium Complexity': 18.833333333333332}\n",
+      "high_complexity_count: 5\n",
+      "pct_high_complexity: 4.273504273504273\n",
+      "\n",
+      "🔶 CAPACITY METRICS\n",
+      "--------------------------------------------------------------------------------\n",
+      "current_month_volume: 1\n",
+      "last_month_volume: 2\n",
+      "mom_change: -50.0\n",
+      "avg_daily_completions: 2.34\n",
+      "reports_per_valuer_per_month: 5.318181818181818\n",
+      "\n",
+      "========================================================================================================================\n",
+      "SUMMARY COUNTS\n",
+      "========================================================================================================================\n",
+      "Operations metrics: 10\n",
+      "Valuer metrics: 7\n",
+      "Client Retention metrics: 8\n",
+      "Workload metrics: 6\n",
+      "Geographic Coverage metrics: 6\n",
+      "Complexity metrics: 4\n",
+      "Capacity metrics: 5\n",
+      "\n",
+      "========================================================================================================================\n",
+      "KEY INTERNAL HIGHLIGHTS\n",
+      "========================================================================================================================\n",
+      "\n",
+      "⏱ Turnaround Performance:\n",
+      "   - Average turnaround days: 20.2\n",
+      "   - Fast Track %: 59.0%\n",
+      "   - Delayed %: 23.9%\n",
+      "\n",
+      "👥 Valuer Performance:\n",
+      "   - Active valuers: 2\n",
+      "   - Avg reports/valuer: 58.5\n",
+      "   - Top performer: Danish Onyango Orech\n",
+      "\n",
+      "🔁 Client Retention:\n",
+      "   - Repeat client rate: 87.2%\n",
+      "   - Unique clients: 28\n",
+      "\n",
+      "✓ Internal report metrics printed successfully.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ====================== CELL 2: PRINT ALL INTERNAL METRICS ======================\n",
+    "\n",
+    "internal_metrics = calculate_internal_metrics(df)\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*120)\n",
+    "print(\"📘 INTERNAL REPORT — FULL METRICS DUMP\")\n",
+    "print(\"=\"*120)\n",
+    "\n",
+    "for section_name, section_values in internal_metrics.items():\n",
+    "    print(f\"\\n🔶 {section_name.upper()} METRICS\")\n",
+    "    print(\"-\" * 80)\n",
+    "    \n",
+    "    if isinstance(section_values, dict):\n",
+    "        for key, value in section_values.items():\n",
+    "            print(f\"{key}: {value}\")\n",
+    "    else:\n",
+    "        print(section_values)\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*120)\n",
+    "print(\"SUMMARY COUNTS\")\n",
+    "print(\"=\"*120)\n",
+    "print(f\"Operations metrics: {len(internal_metrics['operations'])}\")\n",
+    "print(f\"Valuer metrics: {len(internal_metrics['valuers'])}\")\n",
+    "print(f\"Client Retention metrics: {len(internal_metrics['client_retention'])}\")\n",
+    "print(f\"Workload metrics: {len(internal_metrics['workload'])}\")\n",
+    "print(f\"Geographic Coverage metrics: {len(internal_metrics['geographic_coverage'])}\")\n",
+    "print(f\"Complexity metrics: {len(internal_metrics['complexity'])}\")\n",
+    "print(f\"Capacity metrics: {len(internal_metrics['capacity'])}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*120)\n",
+    "print(\"KEY INTERNAL HIGHLIGHTS\")\n",
+    "print(\"=\"*120)\n",
+    "\n",
+    "print(f\"\\n⏱ Turnaround Performance:\")\n",
+    "print(f\"   - Average turnaround days: {internal_metrics['operations']['avg_turnaround_days']:.1f}\")\n",
+    "print(f\"   - Fast Track %: {internal_metrics['operations']['pct_fast_track']:.1f}%\")\n",
+    "print(f\"   - Delayed %: {internal_metrics['operations']['pct_delayed']:.1f}%\")\n",
+    "\n",
+    "print(f\"\\n👥 Valuer Performance:\")\n",
+    "print(f\"   - Active valuers: {internal_metrics['valuers']['active_valuers']}\")\n",
+    "print(f\"   - Avg reports/valuer: {internal_metrics['valuers']['avg_reports_per_valuer']:.1f}\")\n",
+    "print(f\"   - Top performer: {internal_metrics['valuers']['top_performer']}\")\n",
+    "\n",
+    "print(f\"\\n🔁 Client Retention:\")\n",
+    "print(f\"   - Repeat client rate: {internal_metrics['client_retention']['repeat_rate']:.1f}%\")\n",
+    "print(f\"   - Unique clients: {internal_metrics['client_retention']['total_unique_clients']}\")\n",
+    "\n",
+    "print(\"\\n✓ Internal report metrics printed successfully.\\n\")\n"
+   ]
   }
  ],
  "metadata": {
