--- a/notebooks/sql_editor.ipynb
+++ b/notebooks/sql_editor.ipynb
@@ -9,18 +9,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c7446c4",
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "f6851357",
    "metadata": {},
@@ -244,6 +232,62 @@
     "    WHEN (valuation_date - inspection_date) > 30 THEN 'Delayed'\n",
     "    ELSE 'Invalid'\n",
     "END;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d46d14a3",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "UPDATE valuations_2025_clean_v2\n",
+    "SET turnaround_category = CASE\n",
+    "    WHEN (valuation_date - inspection_date) BETWEEN 0 AND 10 THEN 'Fast Track'\n",
+    "    WHEN (valuation_date - inspection_date) BETWEEN 11 AND 30 THEN 'Standard'\n",
+    "    WHEN (valuation_date - inspection_date) > 30 THEN 'Delayed'\n",
+    "    ELSE 'Invalid'\n",
+    "END\n",
+    "WHERE id IN (118, 119);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "230a94c0",
+   "metadata": {},
+   "source": [
+    "Client Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5b49249",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "WITH client_classification AS (\n",
+    "    SELECT \n",
+    "        id,\n",
+    "        CASE \n",
+    "            WHEN COUNT(*) OVER (PARTITION BY client_name) > 1 THEN 'Repeat Client'\n",
+    "            ELSE 'One-time Client'\n",
+    "        END AS computed_client_type\n",
+    "    FROM valuations_2025_clean_v2\n",
+    ")\n",
+    "UPDATE valuations_2025_clean_v2 v\n",
+    "SET client_type = c.computed_client_type\n",
+    "FROM client_classification c\n",
+    "WHERE v.id = c.id\n",
+    "  AND v.id IN (118, 119);"
    ]
   }
  ],
